--- a/wp-content/themes/lzd/style.css
+++ b/wp-content/themes/lzd/style.css
@@ -1,1 +1,65 @@
-/*Theme Name: LZDTheme URI: http://demo.qodeinteractive.com/minimum/Description: A child theme of Minimum ThemeAuthor: Alpin LabAuthor URI: http://www.alpin-lab.comVersion: 1.1.3Template: minimum*/@import url("../minimum/style.css");.portfolio_images img {  width: auto;}.article_inner .image img {  max-height: 238px;}.tp-caption.description{  position: absolute;  color: #fff;  text-shadow: none;  font-weight: 400;  font-size: 16px;  line-height: 20px;  padding: 0px 4px;  padding-top: 1px;  margin: 0px;  border-width: 0px;  border-style: none;  background-color:#111;}footer {  width: 100%;  margin-bottom: 50px;}.slider_small .slide_item .image {  overflow: hidden;  margin: 0 0 8px 0;  display: block;  max-height: 169px;}.bsk-files-category li {  background-color: #033469;  width: 150px;  float: left;  padding: 44px;  margin: 20px;  border-radius: 4px;  margin-bottom:40px;}.bsk-files-category li a {  color: #FFFFFF;  text-decoration: none;  text-align: center;  font-family: inherit;  font-size: 17px;  display: block;}.bsk-files-category li a:hover {  text-decoration:underline;}.bsk-files-category li:hover {  background-color : #155CA8;}
+/*
+Theme Name: LZD
+Theme URI: http://demo.qodeinteractive.com/minimum/
+Description: A child theme of Minimum Theme
+Author: Alpin Lab
+Author URI: http://www.alpin-lab.com
+Version: 1.1.3
+Template: minimum
+*/
+@import url("../minimum/style.css");
+
+.portfolio_images img {
+  width: auto;
+}
+
+.article_inner .image img {
+  max-height: 238px;
+}
+
+.tp-caption.titre,
+.tp-caption.big_description {
+  font-family: inherit;
+}
+.tp-caption.big_description {
+  font-style: italic;
+}
+
+footer {
+  width: 100%;
+  margin-bottom: 50px;
+}
+
+.slider_small .slide_item .image {
+  overflow: hidden;
+  margin: 0 0 8px 0;
+  display: block;
+  max-height: 169px;
+}
+
+.bsk-files-category li {
+  background-color: #033469;
+  width: 150px;
+  float: left;
+  padding: 44px;
+  margin: 20px;
+  border-radius: 4px;
+  margin-bottom:40px;
+}
+
+.bsk-files-category li a {
+  color: #FFFFFF;
+  text-decoration: none;
+  text-align: center;
+  font-family: inherit;
+  font-size: 17px;
+  display: block;
+}
+
+.bsk-files-category li a:hover {
+  text-decoration:underline;
+}
+
+.bsk-files-category li:hover {
+  background-color : #155CA8;
+}
