Fix plugin author URL

--- a/wp-content/themes/lzd/style.css
+++ b/wp-content/themes/lzd/style.css
@@ -3,7 +3,7 @@ Theme Name: LZD
 Theme URI: http://demo.qodeinteractive.com/minimum/
 Description: A child theme of Minimum Theme
 Author: Alpin Lab
-Author URI: http://www.alpin-lab.com
+Author URI: http://www.alpine-lab.com
 Version: 1.1.3
 Template: minimum
 */
