--- a/wp-content/themes/lzd/style.css
+++ b/wp-content/themes/lzd/style.css
@@ -8,6 +8,7 @@ Version: 1.1.3
 Template: minimum
 */
 @import url("../minimum/style.css");
+@import url("fonts.css");
 
 .portfolio_images img {
   width: auto;
