--- a/wp-content/themes/lzd/style.css
+++ b/wp-content/themes/lzd/style.css
@@ -35,9 +35,14 @@ Template: minimum
   white-space: normal !important;
 }
 
+.home .slider_small .separator.small {
+  display: none !important;
+}
+
 footer {
   width: 100%;
   margin-bottom: 50px;
+  margin-top: 100px;
 }
 footer .widget li a {
   font-size: 15px;
