Some more style changes...

--- a/wp-content/themes/lzd/style.css
+++ b/wp-content/themes/lzd/style.css
@@ -213,6 +213,6 @@ table.tablepress tbody td {
   margin: 0 0 20px 20px;
 }
 
-.posts_holder3 .article_inner .info {
+.posts_holder3 .article_inner .info .left {
   display: none !important;
 }
